--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+<script type="text/javascript">
+//<![CDATA[
+var owa_baseUrl = 'https://ulysses.systems/analytics/';
+var owa_cmds = owa_cmds || [];
+owa_cmds.push(['setSiteId', '8a47cdcc3842a56175fd1c013497dc64']);
+owa_cmds.push(['trackPageView']);
+owa_cmds.push(['trackClicks']);
+
+(function() {
+    var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
+    owa_baseUrl = ('https:' == document.location.protocol ? window.owa_baseSecUrl || owa_baseUrl.replace(/http:/, 'https:') : owa_baseUrl );
+    _owa.src = owa_baseUrl + 'modules/base/js/owa.tracker-combined-min.js';
+    var _owa_s = document.getElementsByTagName('script')[0]; _owa_s.parentNode.insertBefore(_owa, _owa_s);
+}());
+//]]>
+</script>
 </head>
 
 <body style="width: 100%;color: rgb(255,255,255);font-family: 'Josefin Sans', sans-serif;background: linear-gradient(4deg, black, rgb(45,45,45));height: 100%;">
