--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ var owa_cmds = owa_cmds || [];
 owa_cmds.push(['setSiteId', '8a47cdcc3842a56175fd1c013497dc64']);
 owa_cmds.push(['trackPageView']);
 owa_cmds.push(['trackClicks']);
+owa_cmds.push(['trackDomStream']);
 
 (function() {
     var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
@@ -46,10 +47,10 @@ owa_cmds.push(['trackClicks']);
             <div class="container d-table-cell" style="margin-top: 20%;vertical-align: middle;">
                 <div class="row" style="margin-bottom: 5%;">
                     <div class="col-md-6 col-xl-10">
-                        <div data-aos="fade-right" style="color: rgb(0,0,0);padding: 10px;background: linear-gradient(96deg, rgb(138,138,138), rgb(212,212,212));border-radius: 10px;">
-                            <h1 class="d-title" style="transition: 0.5s;font-weight: 1000;font-size: 106px;">Portfolio</h1>
-                            <h1 class="d-title" style="font-size: 63px;font-weight: 500;margin-bottom: 0px;transition: 0.5s;">Taha Torabpour</h1>
-                            <h1 class="d-title" style="font-size: 30px;transition: 0.5s;">Web designer, Programmer</h1>
+                        <div data-aos="fade-right" class="d-div" style="color: rgb(0,0,0);padding: 10px;background: linear-gradient(96deg, rgb(138,138,138), rgb(212,212,212));border-radius: 10px;">
+                            <h1 style="transition: 0.5s;font-weight: 1000;font-size: 106px;">Portfolio</h1>
+                            <h2 style="font-size: 63px;font-weight: 500;margin-bottom: 0px;transition: 0.5s;">Taha Torabpour</h2>
+                            <h2 style="font-size: 30px;transition: 0.5s;">Web designer, Programmer</h2>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-1">
@@ -178,26 +179,23 @@ owa_cmds.push(['trackClicks']);
         </div>
         <div style="background: linear-gradient(96deg, rgb(251,255,47), #ffe100);">
             <div class="d-table" style="width: 100%;color: rgb(0,0,0);height: 300px;padding: 20px;">
-                <h1 class="d-table-cell" style="font-weight: 1000;font-size: 106px;transition: 0.5s;vertical-align: middle;">Miscellaneous</h1>
+                <h1 class="d-table-cell" style="font-weight: 1000;font-size: 106px;transition: 0.5s;vertical-align: middle;">About</h1>
                 <h1 class="d-table-cell" style="font-size: 38px;transition: 0.5s;vertical-align: middle;font-weight: 300;">Lorem impsum</h1>
             </div>
             <div class="container" style="margin-top: 5%;">
                 <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
-                    <div class="col-md-6 col-xl-10">
+                    <div class="col-md-6 col-xl-12">
                         <div data-aos="fade-right" class="d-div" style="color: rgb(255,255,255);padding: 10px;background: linear-gradient(-90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;">
-                            <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;">Certificates</h1>
+                            <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;">Contact</h1>
                             <div style="border-bottom-width: 3px;border-bottom-style: solid;width: 50%;color: rgba(255,255,255,0.4);"></div>
-                            <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Programming:</strong><br>- Javascript, JQuery, PHP, MySQL<br><strong>Design:</strong><br>- Photoshop, Illustrator</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="500" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">2019-2020</h1><i class="fa fa-calendar d-title" style="font-size: 40px;"></i>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="600" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Preview</h1><i class="fa fa-link d-title" style="font-size: 40px;"></i>
+                            <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Languages:</strong><br>English - Native<br>Persian - Native<br>German - Fluent<br>Slovak - Conversational</h2>
+                            <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Email:</strong><br></h2>
+                            <div class="l-trig">
+                                <div class="d-inline-block" style="height: 48px;position: relative;z-index: 1;">
+                                    <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;">to.taha@protonmail.com<br></h2>
+                                    <div class="l-div"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
