--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@ owa_cmds.push(['trackDomStream']);
 <body style="width: 100%;color: rgb(255,255,255);font-family: 'Josefin Sans', sans-serif;background: linear-gradient(4deg, black, rgb(45,45,45));height: 100%;">
     <div class="b-trig" style="padding: 10px;">
         <div class="d-flex justify-content-xl-start align-items-xl-start" data-aos="slide-up" data-aos-delay="1000" id="b-div">
-            <div class="d-flex justify-content-xl-center align-items-xl-start b-but" style="padding: 5px;">
-                <h1 class="b-h1"><strong>P</strong>ortfolio</h1>
+            <div class="d-inline-block l-trig" style="height: 48px;position: relative;z-index: 1;">
+                <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>P</strong>ortfolio<br></h2>
+                <div class="b-div"></div>
             </div>
-            <div class="d-flex justify-content-xl-center align-items-xl-start b-but" style="padding: 5px;">
-                <h1 class="b-h1"><strong>C</strong>ontact</h1>
+            <div class="d-inline-block l-trig" style="height: 48px;position: relative;z-index: 1;">
+                <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>C</strong>ontact<br></h2>
+                <div class="b-div"></div>
             </div>
         </div>
     </div>
@@ -46,25 +48,21 @@ owa_cmds.push(['trackDomStream']);
         <div class="d-table" style="width: 100%;height: 100%;padding-right: 5%;padding-left: 5%;">
             <div class="container d-table-cell" style="margin-top: 20%;vertical-align: middle;">
                 <div class="row" style="margin-bottom: 5%;">
-                    <div class="col-md-6 col-xl-10">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
                         <div data-aos="fade-right" class="d-div" style="color: rgb(0,0,0);padding: 10px;background: linear-gradient(96deg, rgb(138,138,138), rgb(212,212,212));border-radius: 10px;">
-                            <h1 style="transition: 0.5s;font-weight: 1000;font-size: 106px;">Portfolio</h1>
-                            <h2 style="font-size: 63px;font-weight: 500;margin-bottom: 0px;transition: 0.5s;">Taha Torabpour</h2>
-                            <h2 style="font-size: 30px;transition: 0.5s;">Web designer, Programmer</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="600" style="color: rgb(0,0,0);padding: 0;background: linear-gradient(-84deg, rgb(138,138,138), rgb(212,212,212));border-radius: 10px;text-align: center;height: 100%;justify-content: center;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Scroll down</h1><i class="fa fa-angle-double-down d-title" style="font-size: 81px;"></i>
+                            <h1 style="transition: 0.5s;font-weight: 1000;font-size: 11vw;">Portfolio</h1>
+                            <h2 class="d-par" style="margin-bottom: 0px;font-weight: 600;">Taha Torabpour</h2>
+                            <h2 class="d-par" style="font-weight: 300;">Web designer, 2D designer, Programmer</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div style="background: linear-gradient(96deg, rgb(138,138,138), rgb(212,212,212));">
-            <div class="d-table" style="width: 100%;color: rgb(0,0,0);height: 300px;padding: 20px;">
-                <h1 class="d-table-cell" style="font-weight: 1000;font-size: 106px;transition: 0.5s;vertical-align: middle;">Web Design</h1>
-                <h1 class="d-table-cell" style="font-size: 38px;transition: 0.5s;vertical-align: middle;font-weight: 300;">Lorem impsum</h1>
+            <div class="justify-content-xl-start align-items-xl-center" style="width: 100%;color: rgb(0,0,0);padding: 20px;">
+                <div class="d-inline-block">
+                    <h1 class="d-inline-block" style="font-weight: 1000;font-size: 8vw;transition: 0.5s;vertical-align: middle;margin-bottom: 50px;margin-right: 10px;margin-left: 10px;">Web Design</h1>
+                </div>
             </div>
             <div class="container" style="margin-top: 5%;">
                 <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
@@ -76,13 +74,13 @@ owa_cmds.push(['trackDomStream']);
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="500" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">2019-2020</h1><i class="fa fa-calendar d-title" style="font-size: 40px;"></i>
+                        <div class="d-flex" data-aos="fade-up" data-aos-delay="500" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));text-align: center;height: 100%;justify-content: center;padding-top: 10px;border-radius: 10px;">
+                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">2019-2020</h1><i class="fa fa-calendar" style="font-size: 40px;"></i>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-1">
                         <div class="d-flex" data-aos="fade-up" data-aos-delay="600" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Preview</h1><i class="fa fa-link d-title" style="font-size: 40px;"></i>
+                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Preview</h1><i class="fa fa-link" style="font-size: 40px;"></i>
                         </div>
                     </div>
                 </div>
@@ -109,9 +107,10 @@ owa_cmds.push(['trackDomStream']);
             </div>
         </div>
         <div style="background: linear-gradient(96deg, rgb(22,22,22), rgb(65,65,65));">
-            <div class="d-table" style="width: 100%;height: 300px;padding: 20px;">
-                <h1 class="d-table-cell" style="font-weight: 1000;font-size: 106px;transition: 0.5s;vertical-align: middle;">2D Design</h1>
-                <h1 class="d-table-cell" style="font-size: 38px;transition: 0.5s;vertical-align: middle;font-weight: 300;">Lorem impsum</h1>
+            <div class="justify-content-xl-start align-items-xl-center" style="width: 100%;color: rgb(0,0,0);padding: 20px;">
+                <div class="d-inline-block" style="color: rgb(255,255,255);">
+                    <h1 class="d-inline-block" style="font-weight: 1000;font-size: 8vw;transition: 0.5s;vertical-align: middle;margin-bottom: 50px;margin-right: 10px;margin-left: 10px;">2D Design</h1>
+                </div>
             </div>
             <div class="container" style="margin-top: 5%;">
                 <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
@@ -178,13 +177,14 @@ owa_cmds.push(['trackDomStream']);
             </div>
         </div>
         <div style="background: linear-gradient(96deg, rgb(251,255,47), #ffe100);">
-            <div class="d-table" style="width: 100%;color: rgb(0,0,0);height: 300px;padding: 20px;">
-                <h1 class="d-table-cell" style="font-weight: 1000;font-size: 106px;transition: 0.5s;vertical-align: middle;">About</h1>
-                <h1 class="d-table-cell" style="font-size: 38px;transition: 0.5s;vertical-align: middle;font-weight: 300;">Lorem impsum</h1>
+            <div class="justify-content-xl-start align-items-xl-center" style="width: 100%;color: rgb(0,0,0);padding: 20px;">
+                <div class="d-inline-block">
+                    <h1 class="d-inline-block" style="font-weight: 1000;font-size: 8vw;transition: 0.5s;vertical-align: middle;margin-bottom: 50px;margin-right: 10px;margin-left: 10px;">About</h1>
+                </div>
             </div>
             <div class="container" style="margin-top: 5%;">
-                <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
-                    <div class="col-md-6 col-xl-12">
+                <div class="row row-cols-1" style="margin-bottom: 10%;color: rgb(255,255,255);">
+                    <div class="col-auto col-sm-12 col-md-12 col-xl-12">
                         <div data-aos="fade-right" class="d-div" style="color: rgb(255,255,255);padding: 10px;background: linear-gradient(-90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;">
                             <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;">Contact</h1>
                             <div style="border-bottom-width: 3px;border-bottom-style: solid;width: 50%;color: rgba(255,255,255,0.4);"></div>
