--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@ owa_cmds.push(['trackDomStream']);
             <div class="d-inline-block l-trig" style="height: 48px;position: relative;z-index: 1;">
                 <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>P</strong>ortfolio<br></h2>
                 <div class="b-div"></div>
-            </div>
-            <div class="d-inline-block l-trig" style="height: 48px;position: relative;z-index: 1;">
-                <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>C</strong>ontact<br></h2>
-                <div class="b-div"></div>
-            </div>
+            </div><a href="#about" style="color: rgb(255,255,255);">
+                <div class="d-inline-block l-trig" style="height: 48px;position: relative;z-index: 1;">
+                    <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>C</strong>ontact<br></h2>
+                    <div class="b-div"></div>
+                </div>
+            </a>
         </div>
     </div>
     <div style="height: 100%;width: 100%;">
@@ -66,40 +67,38 @@ owa_cmds.push(['trackDomStream']);
             </div>
             <div class="container" style="margin-top: 5%;">
                 <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
-                    <div class="col-md-6 col-xl-10">
+                    <div class="col-md-12 col-lg-12 col-xl-12">
                         <div data-aos="fade-right" class="d-div">
-                            <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;">Bratmun</h1>
-                            <div style="border-bottom-width: 3px;border-bottom-style: solid;width: 50%;color: rgba(255,255,255,0.4);"></div>
-                            <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Programming:</strong><br>- Javascript, JQuery, PHP, MySQL<br><strong>Design:</strong><br>- Photoshop, Illustrator</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="500" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));text-align: center;height: 100%;justify-content: center;padding-top: 10px;border-radius: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">2019-2020</h1><i class="fa fa-calendar" style="font-size: 40px;"></i>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="600" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Preview</h1><i class="fa fa-link" style="font-size: 40px;"></i>
+                            <div class="d-inline-block">
+                                <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;margin-right: 10px;">Bratmun</h1>
+                                <div class="d-line"></div>
+                            </div>
+                            <h2 class="d-desc" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Duration:</strong><br>2019-2020<br><strong>Programming:</strong><br>- Javascript, JQuery, PHP, MySQL<br><strong>Design:</strong><br>- Photoshop, Illustrator</h2><a href="assets/img/card-v2.jpg" style="color: rgb(255,255,255);">
+                                <div class="text-right l-trig d-but">
+                                    <div class="d-inline-block" style="height: 48px;position: relative;z-index: 1;">
+                                        <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>Preview</strong><br></h2>
+                                        <div class="l-div"></div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="row" style="margin-bottom: 10%;color: rgb(255,255,255);">
-                    <div class="col-md-6 col-xl-10">
-                        <div data-aos="fade-right" class="d-div" style="color: rgb(255,255,255);padding: 10px;background: linear-gradient(-90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;">
-                            <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;">Persian Carpet</h1>
-                            <div style="border-bottom-width: 3px;border-bottom-style: solid;width: 50%;color: rgba(255,255,255,0.4);"></div>
-                            <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Programming:</strong><br>- Javascript, JQuery<br><strong>Design:</strong><br>- Photoshop, Illustrator</h2>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="500" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">2020-2021</h1><i class="fa fa-calendar d-title" style="font-size: 40px;"></i>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xl-1">
-                        <div class="d-flex" data-aos="fade-up" data-aos-delay="600" style="color: rgb(255,255,255);padding: 0;background: linear-gradient(90deg, rgb(52,52,52) 0%, rgb(32,32,32));border-radius: 10px;text-align: center;height: 100%;justify-content: center;padding-top: 10px;">
-                            <h1 style="font-size: 18px;writing-mode: vertical-rl;margin: 0;margin-right: -24px;">Preview</h1><i class="fa fa-link d-title" style="font-size: 40px;"></i>
+                    <div class="col-md-12 col-lg-12 col-xl-12">
+                        <div data-aos="fade-right" class="d-div">
+                            <div class="d-inline-block">
+                                <h1 style="font-size: 63px;font-weight: 700;margin-bottom: -12px;transition: 0.5s;margin-right: 10px;">Persian Carpet</h1>
+                                <div class="d-line"></div>
+                            </div>
+                            <h2 class="d-desc" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Duration:</strong><br>2020-2021<br><strong>Programming:</strong><br>- Javascript, JQuery<br><strong>Design:</strong><br>- Photoshop, Illustrator</h2><a href="assets/img/card-v2.jpg" style="color: rgb(255,255,255);">
+                                <div class="text-right l-trig d-but">
+                                    <div class="d-inline-block" style="height: 48px;position: relative;z-index: 1;">
+                                        <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;"><strong>Preview</strong><br></h2>
+                                        <div class="l-div"></div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -177,7 +176,7 @@ owa_cmds.push(['trackDomStream']);
             </div>
         </div>
         <div style="background: linear-gradient(96deg, rgb(251,255,47), #ffe100);">
-            <div class="justify-content-xl-start align-items-xl-center" style="width: 100%;color: rgb(0,0,0);padding: 20px;">
+            <div class="justify-content-xl-start align-items-xl-center" id="about" style="width: 100%;color: rgb(0,0,0);padding: 20px;">
                 <div class="d-inline-block">
                     <h1 class="d-inline-block" style="font-weight: 1000;font-size: 8vw;transition: 0.5s;vertical-align: middle;margin-bottom: 50px;margin-right: 10px;margin-left: 10px;">About</h1>
                 </div>
