--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
+<noscript><p><img src="//ulysses.systems/analytics/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 </head>
 
 <body style="width: 100%;color: rgb(255,255,255);font-family: 'Josefin Sans', sans-serif;background: linear-gradient(4deg, black, rgb(45,45,45));height: 100%;">
