--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                             </div>
                             <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Languages:&nbsp;</strong>English, Persian, German,&nbsp;Slovak</h2>
                             <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Programming: </strong>Javascript, JQuery, PHP, VB.net, C#, Java</h2>
-                            <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Software: </strong>Adobe Creative Suite, Krita, Gimp, MS Office Suite, Libreoffice, Unity, Unreal Engine</h2>
-                            <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Contact me:</strong><br></h2><a class="d-inline-block" href="mailto:to.taha@protonmail.com" style="color: rgb(255,255,255);">
+                            <h2 style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Software: </strong>Adobe Creative Suite, Krita, Gimp, Figma, MS Office Suite, Libreoffice</h2>
+                            <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 10px;"><strong>Email me:</strong><br></h2><a class="d-inline-block" href="mailto:to.taha@protonmail.com" style="color: rgb(255,255,255);">
                                 <div class="l-trig">
                                     <div class="d-inline-block" style="height: 48px;position: relative;z-index: 1;">
                                         <h2 class="d-inline-block" style="font-size: 30px;transition: 0.5s;font-weight: 300;font-family: 'Josefin Sans', sans-serif;margin-top: 5px;margin-right: 10px;margin-left: 5px;">to.taha@protonmail.com<br></h2>
